<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvPertanyaanGender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/pertanyaangender" />

            <RadioGroup
                android:id="@+id/rg0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/rbPria"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pria" />

                <RadioButton
                    android:id="@+id/rbWanita"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/wanita" />

            </RadioGroup>

            <TextView
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:textStyle="bold"
                android:layout_height="wrap_content"
                android:text="@string/bg3no1"/>

            <RadioGroup
                android:id="@+id/rg1"
                android:paddingLeft="15dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

            </RadioGroup>

            <TextView
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:textStyle="bold"
                android:layout_height="wrap_content"
                android:text="@string/bg3no2"/>

            <RadioGroup
                android:id="@+id/rg2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

            </RadioGroup>

            <TextView
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:textStyle="bold"
                android:layout_height="wrap_content"
                android:text="@string/bg3no3"/>

            <RadioGroup
                android:id="@+id/rg3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

            </RadioGroup>

            <TextView
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:textStyle="bold"
                android:layout_height="wrap_content"
                android:text="@string/bg3no4"/>

            <RadioGroup
                android:id="@+id/rg4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

            </RadioGroup>

            <TextView
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:textStyle="bold"
                android:layout_height="wrap_content"
                android:text="@string/bg3no5"/>

            <RadioGroup
                android:id="@+id/rg5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

            </RadioGroup>

            <TextView
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:textStyle="bold"
                android:layout_height="wrap_content"
                android:text="@string/bg3no6"/>

            <RadioGroup
                android:id="@+id/rg6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

            </RadioGroup>

            <TextView
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:textStyle="bold"
                android:layout_height="wrap_content"
                android:text="@string/bg3no7"/>

            <RadioGroup
                android:id="@+id/rg7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

            </RadioGroup>

            <TextView
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:textStyle="bold"
                android:layout_height="wrap_content"
                android:text="@string/bg3no8"/>

            <RadioGroup
                android:id="@+id/rg8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

            </RadioGroup>

            <TextView
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:textStyle="bold"
                android:layout_height="wrap_content"
                android:text="@string/bg3no9"/>

            <RadioGroup
                android:id="@+id/rg9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

            </RadioGroup>

            <TextView
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:textStyle="bold"
                android:layout_height="wrap_content"
                android:text="@string/bg3no10"/>

            <RadioGroup
                android:id="@+id/rg10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

            </RadioGroup>

            <Button
                android:onClick="submitScore"
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/submit"/>

            <Button
                android:onClick="resetScore"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/reset"
                tools:ignore="UsingOnClickInXml" />

            <TextView
                android:id="@+id/tvTotalScore"
                android:textSize="50sp"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/status"/>

        </LinearLayout>

    </ScrollView>

</RelativeLayout>