<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp"
    android:layout_marginTop="5dp"
    android:layout_marginBottom="20dp"
    app:cardCornerRadius="20dp"
    android:id="@+id/material_card_view"
    tools:context=".ExpandCardview">

        <LinearLayout
            android:background="#FFE49F"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

                <LinearLayout
                    android:padding="12dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/text_status_keluarga"
                            android:layout_gravity="center_vertical"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/status"
                            android:textSize="22sp"
                            android:textColor="@color/black"
                            android:textStyle="bold"/>

                        <TextView
                            android:id="@+id/text_cricket_name"
                            android:layout_gravity="center_vertical"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textStyle="bold"
                            android:text="@string/kepemilikan_smartphone_handpone"
                            android:textSize="14sp"/>

                        <TextView
                            android:layout_gravity="center_vertical"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/kepemilikan_smartphone_handpone"
                            android:textSize="11sp"/>
                    </LinearLayout>


                    <LinearLayout
                        android:gravity="right"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <CheckBox
                            android:focusable="false"
                            android:button="@drawable/custom_checked_category"
                            android:id="@+id/checkbox_expand"
                            android:layout_width="50dp"
                            android:layout_height="50dp" />

                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:padding="12dp"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                        <TextView
                            android:id="@+id/text_output"
                            android:layout_gravity="center_vertical"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="DEBUG"
                            android:textSize="11sp"/>
                </LinearLayout>

            <!--Halaman Expand-->
            <LinearLayout
                android:visibility="gone"
                android:background="#FFF0C8"
                android:padding="8dp"
                android:layout_marginBottom="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/layout_expand"
                android:orientation="vertical">

                <!--Pertanyaan 1-->
                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/pilTextSubStat1"
                        android:layout_gravity="center_vertical"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/pilSubStat1"/>

                    <LinearLayout
                        android:layout_marginEnd="30dp"
                        android:gravity="right"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <CheckBox
                            android:id="@+id/pil1"
                            android:button="@drawable/custom_checked_subcategory"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>

                    </LinearLayout>
                </LinearLayout>

                <!--Pertanyaan 2-->
                <LinearLayout
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/pilTextSubStat2"
                        android:layout_gravity="center_vertical"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/pilSubStat2"/>

                    <LinearLayout
                        android:layout_marginEnd="30dp"
                        android:gravity="right"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <CheckBox
                            android:id="@+id/pil2"
                            android:button="@drawable/custom_checked_subcategory"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>
                    </LinearLayout>
                </LinearLayout>

                <!--Pertanyaan 3-->
                <LinearLayout
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/pilTextSubStat3"
                        android:layout_gravity="center_vertical"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/pilSubStat3"/>

                    <LinearLayout
                        android:layout_marginEnd="30dp"
                        android:gravity="right"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <CheckBox
                            android:id="@+id/pil3"
                            android:button="@drawable/custom_checked_subcategory"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>
                    </LinearLayout>
                </LinearLayout>

                <!--Pertanyaan 4-->
                <LinearLayout
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/pilTextSubStat4"
                        android:layout_gravity="center_vertical"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/pilSubStat4"/>

                    <LinearLayout
                        android:layout_marginEnd="30dp"
                        android:gravity="right"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <CheckBox
                            android:id="@+id/pil4"
                            android:button="@drawable/custom_checked_subcategory"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>
                    </LinearLayout>
                </LinearLayout>

                <!--Pertanyaan 5-->
                <LinearLayout
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/pilTextSubStat5"
                        android:layout_gravity="center_vertical"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/pilSubStat5"/>

                    <LinearLayout
                        android:layout_marginEnd="30dp"
                        android:gravity="right"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <CheckBox
                            android:id="@+id/pil5"
                            android:button="@drawable/custom_checked_subcategory"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>
                    </LinearLayout>
                </LinearLayout>

                <!--Pertanyaan 6-->
                <LinearLayout
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/pilTextSubStat6"
                        android:layout_gravity="center_vertical"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/pilSubStat6"/>

                    <LinearLayout
                        android:layout_marginEnd="30dp"
                        android:gravity="right"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <CheckBox
                            android:id="@+id/pil6"
                            android:button="@drawable/custom_checked_subcategory"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>

                    </LinearLayout>
                </LinearLayout>

                <!--Spinner 1-->
                <LinearLayout
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_gravity="center_vertical"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/spinnertext"/>

                    <LinearLayout
                        android:layout_marginEnd="16dp"
                        android:gravity="right"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <Spinner
                            android:id="@+id/spinner_waktupenggunaansmartphone"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"/>

                    </LinearLayout>
                </LinearLayout>



            </LinearLayout>
        </LinearLayout>

</androidx.cardview.widget.CardView>